tests/errors/string_builder_missing_use.ptt
spark {
  b is StringBuilder
  yell(b.len())
}
